Fix broken display of Type 3 recipe on Mobile Category page

--- a/app/static/mobile-category.css
+++ b/app/static/mobile-category.css
@@ -13,6 +13,7 @@
 	--color-block1: #ffffff;
 	--color-norecipes: #111111;
 	--color-recipecount: #111111;
+	--color-shadow: #000000;
 	--color-r1bottom: rgba(20, 20, 20, 0.82);
 	--color-recipe2inner: #111111;
 	--color-r2bottom-span: #aeaeae;
@@ -28,6 +29,7 @@
 	--color-block1: #000000;
 	--color-norecipes: #efefef;
 	--color-recipecount: #efefef;
+	--color-shadow: #ffffff;
 	--color-r1bottom: rgba(232, 232, 232, 0.86);
 	--color-recipe2inner: #efefef;
 	--color-r2bottom-span: #5c5c5c;
@@ -43,6 +45,7 @@
 	--color-block1: #ffffff;
 	--color-norecipes: #111111;
 	--color-recipecount: #111111;
+	--color-shadow: #000000;
 	--color-r1bottom: rgba(20, 20, 20, 0.82);
 	--color-recipe2inner: #111111;
 	--color-r2bottom-span: #aeaeae;
@@ -455,7 +458,7 @@
 	background: var(--color-darker);
 	z-index: -1; /* behind recipe2’s content */
 	transition: transform 0.15s;
-  }
+}
 .recipe3:hover {
 	transform: translate(5px, -5px);
 }
@@ -466,8 +469,7 @@
 	background: linear-gradient(to bottom, transparent 0%, var(--color-r3bottom) 100%);
 	border-bottom-left-radius: 14.5px;
 	border-bottom-right-radius: 14.5px;
-	height: 80%;
-	margin-top: 20%;
+	height: 100%;
 	width: 100%;
 	position: relative;
 }
@@ -480,6 +482,11 @@
     transform: translateX(-50%);
 }
 .r3binner div {
+	text-shadow: 0 0 5px var(--color-shadow), 
+		0 0 5px var(--color-shadow), 
+		0 0 5px var(--color-shadow),
+		0 0 5px var(--color-shadow), 
+		0 0 5px var(--color-shadow); 
 	display: -webkit-box;
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
